--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-	"name": "my-project",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint --fix",
-		"prepare": "husky"
-	},
-	"dependencies": {
-		"@tailwindcss/typography": "^0.5.13",
-		"lucide-react": "^0.407.0",
-		"next": "14.2.4",
-		"next-themes": "^0.3.0",
-		"nextjs-toploader": "^1.6.12",
-		"react": "^18",
-		"react-dom": "^18"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.4",
-		"eslint-config-prettier": "^9.1.0",
-		"husky": "^9.1.1",
-		"lint-staged": "^15.2.7",
-		"postcss": "^8",
-		"prettier": "^3.3.3",
-		"prettier-eslint": "^16.3.0",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	},
-	"eslintConfig": {
-		"extends": [
-			"next",
-			"prettier"
-		]
-	},
-	"packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
+  "name": "my-project",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "bun run article:generate && next dev",
+    "build": "next build",
+    "start": "bun run article:generate && next start",
+    "lint": "next lint --fix",
+    "prepare": "husky",
+    "rss": "",
+    "article:new": "bun run ./scripts/articles/new",
+    "article:generate": "bun run ./scripts/articles/generate"
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.5",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "highlight.js": "^11.10.0",
+    "lucide-react": "^0.407.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
+    "react": "^18",
+    "react-dom": "^18",
+    "rehype-highlight": "^7.0.0",
+    "tailwind-highlightjs": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.12",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "husky": "^9.1.1",
+    "lint-staged": "^15.2.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
